tests/compile_fail/mul_assign/unknown_container_attribute.stderr
error: only `forward` allowed here
 --> tests/compile_fail/mul_assign/unknown_container_attribute.rs:2:14
  |
2 | #[mul_assign(unknown)]
  |              ^^^^^^^
